--- a/day4.ipynb
+++ b/day4.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
     "from langchain.memory import ConversationBufferMemory\n",
     "\n",
     "# 1. 문서 로드\n",
-    "loader = TextLoader(\"./document.txt\")\n",
+    "loader = UnstructuredFileLoader(\"./document.txt\")\n",
     "documents = loader.load()\n",
     "\n",
     "# 2. 문서 쪼개기\n",
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -90,15 +90,18 @@
      "text": [
       "\n",
       "Question: Aaronson 은 유죄인가요?\n",
-      "Answer: 네, Jones, Aaronson 및 Rutherford는 자신들에게 적용된 범죄에 유죄로 판결받았습니다.\n",
+      "Answer: 저는 그 질문에 대한 답을 알 수 없습니다.\n",
       "--------------------------------------------------\n",
       "\n",
       "Question: 그가 테이블에 어떤 메시지를 썼나요?\n",
-      "Answer: 죄송합니다. 제가 알고 있는 정보에는 Aaronson이 테이블에 어떤 메시지를 썼는지에 대한 내용이 없습니다.\n",
+      "Answer: 그가 쓴 메시지는 다음과 같습니다:\n",
+      "FREEDOM IS SLAVERY\n",
+      "TWO AND TWO MAKE FIVE\n",
+      "GOD IS POWER\n",
       "--------------------------------------------------\n",
       "\n",
       "Question: Julia 는 누구인가요?\n",
-      "Answer: Julia는 위스턴이 사랑하는 여성 캐릭터입니다. 위스턴과 함께 Party에 저항하고자 하는 노력을 하지만 결국 Party에 패배하게 되는 과정에서 중요한 역할을 합니다.\n",
+      "Answer: Julia는 Winston과 함께 Party에 반항하고 사랑을 나누는 여성 캐릭터입니다. 그녀는 Winston에게 중요한 인물로 나타납니다.\n",
       "--------------------------------------------------\n"
      ]
     }
@@ -117,11 +120,18 @@
     "    print(f\"Answer: {result['answer']}\")\n",
     "    print(\"-\" * 50)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -135,7 +145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
